# mineral-daily-agent

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  RUN.md  docker-compose.yml  mcp-config.json  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
eval/: README.md  cases.jsonl  run_eval.py  sample_trace.json
examples/: briefing-pilbara-2026-07-09.md  briefing-pilbara-copper-compose-2026-07-09.md
scripts/: capture_news_fixture.py  curate_manual_prices.py  make_fixture_pdf.py  snapshot_prices.py
src/mineral_daily/agent/: briefing.py  llm.py  main.py  mcp_client.py  react.py
src/mineral_daily/common/: healthcheck.py  http.py  logging.py  parsing.py  runner.py
src/mineral_daily/evaluation/: __init__.py  llm_judge.py  scorecard.py
src/mineral_daily/servers/news/: article.py  feeds.py  models.py  server.py
src/mineral_daily/servers/news/data/: article_fixture.html  fixture_meta.json  rss_fixture.xml
src/mineral_daily/servers/pdf/: models.py  parser.py  server.py
src/mineral_daily/servers/price/: models.py  providers.py  server.py
src/mineral_daily/servers/price/data/: prices_snapshot.json
tests/: conftest.py  test_agent_offline.py  test_eval.py  test_news.py  test_pdf.py  test_price.py  test_runner.py
