[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mineral-daily-agent"
version = "0.1.0"
description = "矿权日报 Agent：3 个 MCP server + ReAct Agent client，生成矿业每日简报"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.12,<2",
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "pdfplumber>=0.11",
    "pydantic>=2.7",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "reportlab>=4.1",
]

[project.scripts]
mining-news-mcp = "mineral_daily.servers.news.server:main"
mineral-pdf-mcp = "mineral_daily.servers.pdf.server:main"
lme-price-mcp = "mineral_daily.servers.price.server:main"
mineral-daily = "mineral_daily.agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mineral_daily.servers.price" = ["data/*.json"]
"mineral_daily.servers.news" = ["data/*.xml", "data/*.html"]
"mineral_daily.servers.pdf" = ["data/*.pdf"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# 系统提示词为中文 prose，不因行宽改写语义
"src/mineral_daily/agent/briefing.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
# feedparser / trafilatura / pdfplumber / reportlab 无类型存根
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["network: 需要外网访问（CI 中默认跳过）"]
addopts = "-m 'not network'"
